fix: import numpy

--- a/Ex.Data analysis and visualisation-solution.ipynb
+++ b/Ex.Data analysis and visualisation-solution.ipynb
@@ -2,43 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "<a href=\"https://colab.research.google.com/github/ML-Challenge/week2-data-analysis/blob/master/Ex.Data%20analysis%20and%20visualisation-solution.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\"/></a>"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Setup"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/bin/sh: wget: command not found\n",
-      "Archive:  datasets.zip\n",
-      "  inflating: utils.py                \n",
-      "  inflating: data/pennsylvania2012_turnout.csv  \n",
-      "  inflating: data/tips.csv           \n",
-      "  inflating: data/file_clean.csv     \n",
-      "  inflating: data/messy_stock_data.tsv  \n",
-      "  inflating: data/auto-mpg.csv       \n",
-      "  inflating: data/titanic.csv        \n",
-      "  inflating: data/nobel.csv          \n",
-      "  inflating: data/life_expectancy_at_birth.csv  \n",
-      "  inflating: data/urban_population.csv  \n",
-      "  inflating: data/weather_data_austin_2010.csv  \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Download lesson datasets\n",
     "# Required if you're using Google Colab\n",
@@ -48,6 +32,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "3"
@@ -61,6 +46,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 1. The Nobel Prizes\n",
     "<p>The Nobel Prize is perhaps the world's most well known scientific award. Except for the honor, prestige and substantial prize money the recipient also gets a gold medal showing Alfred Nobel (1833 - 1896) who established the prize. Every year it's given to scientists and scholars in the categories chemistry, literature, physics, physiology or medicine, economics, and peace. </p>\n",
@@ -69,7 +55,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 1:\n",
     "\n",
@@ -81,14 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "3"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Loading in required libraries\n",
@@ -105,6 +86,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "10"
@@ -118,6 +100,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 2. So, who gets the Nobel Prize?\n",
     "<p>Just looking at the first couple of prize winners, or Nobel laureates as they are also called, we already see a celebrity: Wilhelm Conrad Röntgen, who discovered X-rays. And actually, we see that all of the winners in 1901 were European men. But that was back in 1901, looking at all winners in the dataset, from 1901 to 2016, which sex and which country is the most commonly represented? </p>\n",
@@ -126,7 +109,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 2:\n",
     "Count up the Nobel Prizes. \n",
@@ -140,14 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "10"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Display the number of (possibly shared) Nobel Prizes handed\n",
@@ -163,6 +141,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "17"
@@ -176,6 +155,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 3. USA dominance\n",
     "<p>Not so surprising perhaps: the most common Nobel laureate between 1901 and 2016 was a man born in the United States of America. But in 1901 all the winners were European. When did the USA start to dominate the Nobel Prize charts?</p>"
@@ -183,7 +163,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 3:\n",
     "Create a DataFrame with two columns: decade and proportion of USA-born Nobel Prize winners that decade.\n",
@@ -200,14 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "17"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculating the proportion of USA born winners per decade\n",
@@ -221,6 +196,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "24"
@@ -234,6 +210,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 4. USA dominance, visualized\n",
     "<p>A table is OK, but to <em>see</em> when the USA started to dominate the Nobel charts we need a plot!</p>"
@@ -241,7 +218,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 4:\n",
     "Plot the proportion of USA born winners per decade\n",
@@ -255,14 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "24"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Setting the plotting theme\n",
@@ -281,6 +253,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "31"
@@ -294,6 +267,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 5. What is the gender of a typical Nobel Prize winner?\n",
     "<p>So the USA became the dominating winner of the Nobel Prize first in the 1930s and had kept the leading position ever since. But one group that was in the lead from the start, and never seems to let go, are <em>men</em>. Maybe it shouldn't come as a shock that there is some imbalance between how many male and female prize winners there are, but how significant is this imbalance? And is it better or worse within specific prize categories like physics, medicine, literature, etc.?</p>"
@@ -301,7 +275,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 5:\n",
     "Plot the proportion of female laureates by decade split by prize category.\n",
@@ -314,14 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "31"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculating the proportion of female laureates per decade\n",
@@ -337,6 +306,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "38"
@@ -350,6 +320,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 6. The first woman to win the Nobel Prize\n",
     "<p>The plot above is a bit messy as the lines are overplotting. But it does show some interesting trends and patterns. Overall the imbalance is pretty large with physics, economics, and chemistry having the largest imbalance. Medicine has a somewhat positive trend, and since the 1990s the literature prize is also now more balanced. The big outlier is the peace prize during the 2010s, but keep in mind that this just covers the years 2010 to 2016.</p>\n",
@@ -358,7 +329,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 6:\n",
     "Extract and display the row showing the first woman to win a Nobel Prize.\n",
@@ -371,14 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "38"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Picking out the first woman to win a Nobel Prize\n",
@@ -387,6 +353,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "45"
@@ -400,6 +367,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 7. Repeat laureates\n",
     "<p>For most scientists/writers/activists a Nobel Prize would be the crowning achievement of a long career. But for some people, one is just not enough, and few have gotten it more than once. Who are these lucky few? </p>"
@@ -407,7 +375,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 7:\n",
     "Extract and display the rows of repeat Nobel Prize winners.\n",
@@ -421,14 +391,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "45"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Selecting the laureates that have received 2 or more prizes.\n",
@@ -437,6 +400,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "52"
@@ -450,6 +414,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 8. Nobel Laureates by age\n",
     "<p>The list of repeat winners contains some illustrious names! We again meet Marie Curie, who got the prize in physics for discovering radiation and in chemistry for isolating radium and polonium. John Bardeen got it twice in physics for transistors and superconductivity, Frederick Sanger got it twice in chemistry, and Linus Carl Pauling got it first in chemistry and later in peace for his work in promoting nuclear disarmament. We also learn that organizations also get the prize as both the Red Cross and the UNHCR have gotten it twice.</p>\n",
@@ -458,7 +423,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 8:\n",
     "Calculate and plot the age of each winner when they won their Nobel Prize.\n",
@@ -480,14 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "52"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Converting birth_date from String to datetime\n",
@@ -502,6 +462,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "59"
@@ -515,6 +476,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 9. Age differences between prize categories\n",
     "<p>The plot above shows us a lot! We see that people use to be around 55 when they received the price, but nowadays the average is closer to 65. But there is a large spread in the laureates' ages, and while most are 50+, some are very young.</p>\n",
@@ -524,7 +486,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 9:\n",
     "Plot how old winners are within the different price categories.\n",
@@ -537,14 +501,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "59"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Same plot as above, but separate plots for each type of Nobel Prize\n",
@@ -553,6 +510,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "66"
@@ -566,6 +524,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 10. Oldest and youngest winners\n",
     "<p>More plots with lots of exciting stuff going on! We see that both winners of the chemistry, medicine, and physics prize have gotten older over time. The trend is strongest for physics: the average age used to be below 50, and now it's almost 70. Literature and economics are more stable. We also see that economics is a newer category. But peace shows an opposite trend where winners are getting younger! </p>\n",
@@ -574,7 +533,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task 10:\n",
     "Pick out the rows of the oldest and the youngest winner of a Nobel Prize.\n",
@@ -588,14 +549,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "66"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The oldest winner of a Nobel Prize as of 2016\n",
@@ -607,6 +561,7 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {
     "dc": {
      "key": "73"
@@ -620,6 +575,7 @@
      "context"
     ]
    },
+   "outputs": [],
    "source": [
     "## 11. Name of youngest winner!\n",
     "<p>What was the name of the youngest winner ever who in 2014 got the prize for \"[her] struggle against the suppression of children and young people and for the right of all children to education\"?</p>"
@@ -627,7 +583,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "### Task  11:\n",
     "Assign the name of the youngest winner of a Nobel Prize to `youngest_winner`."
@@ -636,14 +594,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "dc": {
-     "key": "73"
-    },
-    "tags": [
-     "sample_code"
-    ]
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The name of the youngest winner of the Nobel Prize as of 2016\n",
@@ -653,7 +604,9 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "---\n",
     "**[Week 2 - Data Analysis and Visualisation](https://radu-enuca.gitbook.io/ml-challenge/data-analysis-and-visualisation)**\n",
@@ -678,7 +631,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3-final"
   },
   "toc": {
    "base_numbering": 1,
