--- a/L2.Matplotlib.ipynb
+++ b/L2.Matplotlib.ipynb
@@ -33,7 +33,8 @@
    "outputs": [],
    "source": [
     "# Import utils, we'll be using this module throughout the lesson\n",
-    "import utils"
+    "import utils\n",
+    "import numpy as np"
    ]
   },
   {
